<resources>
    <string name="app_name">AndroidTutorial2</string>
    <string name="test_material">AndroidTutorial2</string>
    <string name="questions_for_self_control">Вопросы для самоконтроля</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="theory">Теория</string>
    <string name="repeat">Повторение</string>
    <string name="testing">Тестирование</string>
    <string name="self_test_questions">Вопросы для самопроверки</string>
    <string name="learn">Обучение</string>
    <string name="recommendations">Советы</string>
    <string name="stats">Статистика</string>
    <string name="examples">Примеры</string>
    <string name="topic_lock">Данные темы будут доступны позже</string>
    <string name="repetition_format">%1$d/6</string>
    <string name="html_template">
        <![CDATA[
        <!DOCTYPE html>
        <html lang="ru">
        <head>
            <meta charset="UTF-8">
            <meta name="viewport" content="width=device-width, initial-scale=1.0">
            <title>Учебный материал</title>
            <style>
                %1$s
            </style>
        </head>
        <body>
            %2$s
        </body>
        </html>
        ]]>
    </string>

    <!-- Errors -->
    <string name="error_sub_topic_not_found">Подтемы не найдены</string>
    <string name="error_css_load">Ошибка загрузки стилей</string>
    <string name="error_unknown">Произошла неизвестная ошибка</string>
    <string name="error">Произошла ошибка</string>
    <string name="reminder_message">Не забудьте повторить %1$s!</string>
    <string name="message_activate_repeat_function">Пожалуйста, активируйте функцию "Повторять", чтобы получить доступ к этому учебному материалу.</string>
    <string name="title_select_action">Выберите действие</string>
    <string name="message_select_action">Что вы хотите сделать перед выходом?</string>
    <string name="postpone_repetition">Отложить повторение</string>
    <string name="remind_later">Напомнить позже</string>
    <string name="reset_progress">Сбросить прогресс</string>
</resources>
